--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>WebGo</title>
+    <script type="text/javascript" src="http://24.16.255.56:8888/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./main.js"></script>
@@ -12,5 +13,7 @@
     <div>Right click and "Inspect Element".  Select the Console Tab to see the debugger output.</div>
 
     <canvas id="gameWorld" width="800" height="800" style="border: 1px solid white; background: black"></canvas>
+    <input type="button" value="Save State" onclick="saveSim();">
+    <input type="button" value="Load State" onclick="loadSim();">
 </body>
 </html>
